crates/nash-report/tests/solve/snapshots/solve__inference__enclosing_given_wins_after_lambda_parameter_types_are_known.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 1368
description: "Code:\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep 'a => Keep (list 'a) where\n    keep xs = xs\ndirect : Keep (list 'a) => 'a -> list 'a\ndirect = \\x -> keep [x]\nnested : Keep (list 'a) => 'a -> list 'a\nnested = \\x ->\n    let\n        helper ignored = keep [x]\n    in\n    helper ()\n"
---
direct : forall a. (Storable a, Keep (list a)) => a -> list a
nested : forall a. (Storable a, Keep (list a)) => a -> list a
