crates/nash-report/tests/solve/snapshots/solve__inference__higher_kinded_bind_chain_retains_its_monad_constraint.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 3312
description: "Code:\n\nmodule Main exposing (..)\ntrait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\ntrait Functor 'f => Applicative 'f where\n    pure : 'a -> 'f 'a\ntrait Applicative 'm => Monad 'm where\n    bind : 'm 'a -> ('a -> 'm 'b) -> 'm 'b\nchain f g mx = bind (bind mx f) g\n"
---
chain : forall a a1 b m. (Monad m, Apply m a1, Apply m b, Apply m a) => (a -> m a1) -> (a1 -> m b) -> m a -> m b
