crates/nash-report/tests/solve/snapshots/solve__inference__higher_kinded_partial_alias_retains_its_nominal_impl.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 3091
description: "module Higher exposing (..)\ntype alias Pair 'left 'right = { first : 'left, second : 'right }\ntrait Keep 'f where\n    keep : 'f 'a -> 'f 'a\nimpl Keep (Pair 'a) where\n    keep x = x\nthrough x = keep x\n\n\nmodule Main exposing (..)\nimport Higher exposing (..)\ntype Color = Red | Blue\ntype Mood = Calm | Busy\npair : Pair Color Color\npair = { first = Red, second = Blue }\nother : Pair Mood Color\nother = Pair Calm Red\nkept = through pair\nkeptOther = through other\n\n\nmodule Reject exposing (..)\nimport Higher exposing (..)\ntype Color = Red | Blue\ntype alias Other 'left 'right = { first : 'left, second : 'right }\nbad = through (Other Red Blue)\n"
---
Higher:
through : forall a f. (Keep f, Apply f a) => f a -> f a
Main:
kept : Pair Color Color
keptOther : Pair Mood Color
other : Pair Mood Color
pair : Pair Color Color
