crates/nash-report/tests/solve/snapshots/solve__inference__higher_kinded_rigid_heads_cannot_specialize.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 3550
description: "module Main exposing (..)\ntype Box 'a = Box 'a\nwrong : 'f 'a -> Box 'a\nwrong x = x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `Box 'a`, found `'f 'a`.
   ╭─[Main.nash:4:11]
 2 │ type Box 'a = Box 'a
 3 │ wrong : 'f 'a -> Box 'a
   ·         ───────┬───────
   ·                ╰── declared type
 4 │ wrong x = x
   ·           ┬
   ·           ╰── body of `wrong`
   ╰────
