crates/nash-report/tests/solve/snapshots/solve__inference__higher_kinded_traits_resolve_distinct_constructors.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 3637
description: "module Main exposing (..)\ntype option 'a = None | Some 'a\ntype Box 'a = Box 'a\ntype Color = Red | Blue\ntrait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\nimpl Functor option where\n    map f xs =\n        case xs of\n            None -> None\n            Some x -> Some (f x)\nimpl Functor Box where\n    map f (Box x) = Box (f x)\ntwice f xs = map f (map f xs)\nlittle = map (\\x -> x) (Some ())\nchangedRepresentation = map (\\x -> (x, x)) (Some ())\nbig = map (\\x -> x) (Box Red)\n"
---
big : Box Color
changedRepresentation : option ( unit, unit )
little : option unit
twice : forall a f. (Functor f, Apply f a) => (a -> a) -> f a -> f a
