crates/nash-report/tests/solve/snapshots/solve__inference__identity_function.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2046
description: "Code:\n\nmodule Main exposing (id)\n\nid x = x\n"
---
id : forall a. a -> a
